Se mando llamar la camara con un objeto rememberLauncherActivityForResult Y se tomo la foto Tema: Multimedia

--- a/ArchivosMultimediaConCompose/app/src/main/res/values/strings.xml
+++ b/ArchivosMultimediaConCompose/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ArchivosMultimediaConCompose</string>
+    <string name="pick_image_button">Pick Picture</string>
 </resources>
