Se integro la grabación y reproduccion de video Tema: Multimedia

--- a/ArchivosMultimediaConCompose/app/src/main/res/values-es/strings.xml
+++ b/ArchivosMultimediaConCompose/app/src/main/res/values-es/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">ArchivosMultimediaConCompose</string>
     <string name="pick_image_button">Tomar foto</string>
+    <string name="capturar_video">Capturar Video</string>
 </resources>
