--- a/ArchivosMultimediaConCompose/app/src/main/res/values/strings.xml
+++ b/ArchivosMultimediaConCompose/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ArchivosMultimediaConCompose</string>
     <string name="pick_image_button">Pick Picture</string>
+    <string name="capturar_video">Capturar Video</string>
 </resources>
