--- a/ArchivosMultimediaConCompose/app/src/main/res/values/strings.xml
+++ b/ArchivosMultimediaConCompose/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ArchivosMultimediaConCompose</string>
     <string name="pick_image_button">Pick Picture</string>
     <string name="capturar_video">Capturar Video</string>
+    <string name="record_audio">Grabar Audio</string>
 </resources>
